--- a/index.html
+++ b/index.html
@@ -25,7 +25,22 @@
                 <div class="exam-details">
                     <p>📝 Total Questions: 60</p>
                     <p>⏱️ Duration: 45 minutes</p>
-                    <p>📊 Max Marks: 50</p>
+                    <p>📊 Max Marks: 60</p>
+                    <p>❌ Negative Marking: -0.25</p>
+                </div>
+                <div class="badges">
+                    <span class="badge">Computer Science</span>
+                    <span class="badge">Banking</span>
+                    <span class="badge">IT</span>
+                </div>
+                <button class="start-btn">Start Mock Test</button>
+            </div>
+                       <div class="exam-card" onclick="window.location.href='mock.html'">
+                <h3 class="exam-title">IBPS SO IT Officer Mock Test - 2 </h3>
+                <div class="exam-details">
+                    <p>📝 Total Questions: 60</p>
+                    <p>⏱️ Duration: 45 minutes</p>
+                    <p>📊 Max Marks: 60</p>
                     <p>❌ Negative Marking: -0.25</p>
                 </div>
                 <div class="badges">
