--- a/mock.html
+++ b/mock.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <h1>Mock Test</h1>
-            <div class="timer" id="timer">Time Left: <span id="time">60:00</span></div>
+            <div class="timer" id="timer">Time Left: <span id="time">45:00</span></div>
         </div>
         
         <div class="main-content">
@@ -56,6 +56,6 @@
         </div>
     </div>
 
-    <script src="./assets/script.js"></script>
+    <script src="./assets/script2.js"></script>
 </body>
 </html>
